--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -11,15 +11,15 @@
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
-    <width>425</width>
-    <height>300</height>
+    <width>520</width>
+    <height>400</height>
    </size>
   </property>
   <property name="acceptDrops">
@@ -34,54 +34,83 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_4">
+    <property name="spacing">
+     <number>6</number>
+    </property>
+    <property name="leftMargin">
+     <number>8</number>
+    </property>
+    <property name="topMargin">
+     <number>12</number>
+    </property>
+    <property name="rightMargin">
+     <number>12</number>
+    </property>
+    <property name="bottomMargin">
+     <number>8</number>
+    </property>
     <item>
      <layout class="QHBoxLayout">
+      <property name="spacing">
+       <number>8</number>
+      </property>
       <property name="leftMargin">
-       <number>2</number>
+       <number>0</number>
       </property>
       <property name="topMargin">
-       <number>2</number>
+       <number>6</number>
       </property>
       <property name="rightMargin">
-       <number>2</number>
+       <number>0</number>
       </property>
       <property name="bottomMargin">
-       <number>2</number>
+       <number>0</number>
       </property>
       <item>
        <widget class="QGroupBox" name="groupBox">
         <property name="title">
-         <string>Image File</string>
+         <string/>
         </property>
-        <layout class="QHBoxLayout">
-         <property name="spacing">
-          <number>3</number>
-         </property>
-         <property name="leftMargin">
-          <number>2</number>
-         </property>
-         <property name="topMargin">
-          <number>2</number>
-         </property>
-         <property name="rightMargin">
-          <number>2</number>
-         </property>
-         <property name="bottomMargin">
-          <number>2</number>
-         </property>
+        <layout class="QVBoxLayout">
          <item>
-          <widget class="DroppableLineEdit" name="leFile"/>
-         </item>
-         <item>
-          <widget class="QToolButton" name="tbBrowse">
+          <widget class="QLabel" name="labelImageFile">
            <property name="text">
-            <string>...</string>
-           </property>
-           <property name="icon">
-            <iconset resource="gui_icons.qrc">
-             <normaloff>:/images/images/browse.png</normaloff>:/images/images/browse.png</iconset>
+            <string>Image File</string>
            </property>
           </widget>
+         </item>
+         <item>
+          <layout class="QHBoxLayout">
+           <property name="spacing">
+            <number>6</number>
+           </property>
+           <property name="leftMargin">
+            <number>6</number>
+           </property>
+           <property name="topMargin">
+            <number>4</number>
+           </property>
+           <property name="rightMargin">
+            <number>6</number>
+           </property>
+           <property name="bottomMargin">
+            <number>6</number>
+           </property>
+           <item>
+            <widget class="DroppableLineEdit" name="leFile"/>
+           </item>
+           <item>
+            <widget class="QToolButton" name="tbBrowse">
+             <property name="text">
+              <string>...</string>
+             </property>
+             <property name="icon">
+              <iconset resource="gui_icons.qrc">
+               <normaloff>:/images/images/browse.png</normaloff>:/images/images/browse.png</iconset>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </item>
         </layout>
        </widget>
@@ -89,44 +118,55 @@
       <item>
        <widget class="QGroupBox" name="groupBox_2">
         <property name="title">
-         <string>Device</string>
+         <string/>
         </property>
-        <layout class="QHBoxLayout">
-         <property name="spacing">
-          <number>0</number>
-         </property>
-         <property name="leftMargin">
-          <number>2</number>
-         </property>
-         <property name="topMargin">
-          <number>2</number>
-         </property>
-         <property name="rightMargin">
-          <number>2</number>
-         </property>
-         <property name="bottomMargin">
-          <number>2</number>
-         </property>
+        <layout class="QVBoxLayout">
          <item>
-          <widget class="QComboBox" name="cboxDevice">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
+          <widget class="QLabel" name="labelDevice">
+           <property name="text">
+            <string>Device</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QToolButton" name="tbSearch">
-           <property name="text">
-            <string>...</string>
+          <layout class="QHBoxLayout">
+           <property name="spacing">
+            <number>6</number>
            </property>
-           <property name="icon">
-            <iconset resource="gui_icons.qrc">
-             <normaloff>:/images/images/search.png</normaloff>:/images/images/search.png</iconset>
+           <property name="leftMargin">
+            <number>6</number>
            </property>
-          </widget>
+           <property name="topMargin">
+            <number>4</number>
+           </property>
+           <property name="rightMargin">
+            <number>6</number>
+           </property>
+           <property name="bottomMargin">
+            <number>6</number>
+           </property>
+           <item>
+            <widget class="QComboBox" name="cboxDevice">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QToolButton" name="tbSearch">
+             <property name="text">
+              <string>...</string>
+             </property>
+             <property name="icon">
+              <iconset resource="gui_icons.qrc">
+               <normaloff>:/images/images/search.png</normaloff>:/images/images/search.png</iconset>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </item>
         </layout>
        </widget>
@@ -139,6 +179,9 @@
        <string>Hash</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
+       <property name="topMargin">
+        <number>16</number>
+       </property>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout">
          <item>
@@ -176,9 +219,6 @@
            <property name="toolTip">
             <string>Generate selected hash on file</string>
            </property>
-           <property name="styleSheet">
-            <string notr="true">padding: 0em .5em 0em .5em;</string>
-           </property>
            <property name="text">
             <string>Generate</string>
            </property>
@@ -194,9 +234,6 @@
            </property>
            <property name="toolTip">
             <string>Copy hash to clipboard</string>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">padding: 0em .5em 0em .5em;</string>
            </property>
            <property name="text">
             <string>Copy</string>
@@ -276,36 +313,47 @@
     <item>
      <widget class="QGroupBox" name="groupBox_5">
       <property name="title">
-       <string>Progress</string>
+       <string/>
       </property>
-      <layout class="QHBoxLayout">
-       <property name="spacing">
-        <number>2</number>
-       </property>
-       <property name="leftMargin">
-        <number>2</number>
-       </property>
-       <property name="topMargin">
-        <number>2</number>
-       </property>
-       <property name="rightMargin">
-        <number>2</number>
-       </property>
-       <property name="bottomMargin">
-        <number>2</number>
-       </property>
+      <layout class="QVBoxLayout">
        <item>
-        <widget class="QProgressBar" name="progressbar">
-         <property name="value">
-          <number>0</number>
-         </property>
-         <property name="textVisible">
-          <bool>true</bool>
-         </property>
-         <property name="format">
-          <string>%p%</string>
+        <widget class="QLabel" name="labelProgress">
+         <property name="text">
+          <string>Progress</string>
          </property>
         </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout">
+         <property name="spacing">
+          <number>6</number>
+         </property>
+         <property name="leftMargin">
+          <number>6</number>
+         </property>
+         <property name="topMargin">
+          <number>4</number>
+         </property>
+         <property name="rightMargin">
+          <number>6</number>
+         </property>
+         <property name="bottomMargin">
+          <number>6</number>
+         </property>
+         <item>
+          <widget class="QProgressBar" name="progressbar">
+           <property name="value">
+            <number>0</number>
+           </property>
+           <property name="textVisible">
+            <bool>true</bool>
+           </property>
+           <property name="format">
+            <string>%p%</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
       </layout>
      </widget>
@@ -315,6 +363,18 @@
     </item>
     <item>
      <widget class="QLabel" name="statLabel">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+        <horstretch>1</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>200</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="text">
        <string/>
       </property>
@@ -322,6 +382,9 @@
     </item>
     <item>
      <layout class="QHBoxLayout">
+      <property name="spacing">
+       <number>6</number>
+      </property>
       <item>
        <widget class="QPushButton" name="bCancel">
         <property name="enabled">
